feat: implement settings ui

--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,12 @@
 @import "tailwindcss";
 @plugin "tailwindcss-react-aria-components";
+@plugin "tailwindcss-animate";
 
 @theme {
     /* Disable Default Colors */
     --color-*: initial;
+
+    --color-white: #fff;
 
     /* Shamrock */
     --color-green-50: #edfcf5;
