--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,7 @@
     --color-*: initial;
 
     --color-white: #fff;
+    --color-accent: #fcfade;
 
     /* Shamrock */
     --color-green-50: #edfcf5;
