--- a/src/main.css
+++ b/src/main.css
@@ -7,7 +7,6 @@
     --color-*: initial;
 
     --color-white: #fff;
-    --color-accent: #fcfade;
 
     /* Shamrock */
     --color-green-50: #edfcf5;
@@ -69,4 +68,18 @@
     --color-red-800: #9f2115;
     --color-red-900: #832219;
     --color-red-950: #480d07;
+    /* Cream */
+    --color-cream-50: #fcfade;
+    --color-cream-100: #fbf8c6;
+    --color-cream-200: #f9ef8f;
+    --color-cream-300: #f5de4f;
+    --color-cream-400: #f0cb1f;
+    --color-cream-500: #e0b312;
+    --color-cream-600: #c18b0d;
+    --color-cream-700: #9a640e;
+    --color-cream-800: #805013;
+    --color-cream-900: #6d4116;
+    --color-cream-950: #3f2109;
+
+
 }
