feat: implement switch spaces

--- a/src/main.css
+++ b/src/main.css
@@ -89,6 +89,10 @@
     html, body, #root {
         @apply h-full;
     }
+
+    #root {
+        @apply bg-gray-50;
+    }
 }
 
 @layer components {
